# quad-rag-core

./: LICENSE  README.md  README_Ru.md  pyproject.toml  requirements.txt
quad_rag_core/: config.py  embedder.py  file_processor.py  path_manager.py  path_watcher.py  qdrant_manager.py  reranker.py  utils.py
